added  moving sea

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div id="viewport"></div>
+
+    <script src="src/controller.js"></script>
+    <script> 
+        const controller = new Controller() 
+    </script>
 </body>
 </html>
