--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="viewport"></div>
+    <div id="viewport">
+        <div id="ports"></div>
+    </div>
 
     <script src="src/controller.js"></script>
+    <script src="src/Port.js"></script>
+    <script src="src/itinerary.js"></script>
     <script> 
         const controller = new Controller() 
+        const madrid = new Port("Madrid")
+        const amsterdam = new Port("Amsterdam")
+        const magusa = new Port("Magusa")
+        const sandiego = new Port("San Diego")
+
+        const itinerary = new Itinerary([madrid, amsterdam, magusa, sandiego])
+        controller.renderPorts(itinerary.ports)
     </script>
 </body>
 </html>
